update and modify file

--- a/project/.gitlab-ci.yml
+++ b/project/.gitlab-ci.yml
@@ -6,7 +6,7 @@ vpc :
   # 'trigger' is the keyword to create a child pipeline
   trigger :
     include: vpc/.gitlab-ci.yml
-    strategy: depend # strategy의 depend 사용 시, 해당 task가 정상적으로 종료 시 완료 표시로 바꾸미
+    strategy: depend # strategy의 depend 사용 시, 해당 task가 정상적으로 종료 시 완료 표시로 바꿈
 
   allow_failure: false
 
@@ -19,7 +19,7 @@ alb-route-table :
     - vpc # vpc가 끝나지 않아도 동작 가능하게 하는 기능
   trigger :
     include: route-table/alb-route-table/.gitlab-ci.yml
-    strategy: depend # strategy의 depend 사용 시, 해당 task가 정상적으로 종료 시 완료 표시로 바꾸미
+    strategy: depend # strategy의 depend 사용 시, 해당 task가 정상적으로 종료 시 완료 표시로 바꿈
 
 bastion-route-table :
   stage : triggers
@@ -27,7 +27,7 @@ bastion-route-table :
     - vpc # vpc가 끝나지 않아도 동작 가능하게 하는 기능
   trigger :
     include: route-table/bastion-route-table/.gitlab-ci.yml
-    strategy: depend # strategy의 depend 사용 시, 해당 task가 정상적으로 종료 시 완료 표시로 바꾸미
+    strategy: depend # strategy의 depend 사용 시, 해당 task가 정상적으로 종료 시 완료 표시로 바꿈
 
 eks-route-table :
   stage : triggers
@@ -35,28 +35,72 @@ eks-route-table :
     - vpc # vpc가 끝나지 않아도 동작 가능하게 하는 기능
   trigger :
     include: route-table/eks-route-table/.gitlab-ci.yml
-    strategy: depend # strategy의 depend 사용 시, 해당 task가 정상적으로 종료 시 완료 표시로 바꾸미
+    strategy: depend # strategy의 depend 사용 시, 해당 task가 정상적으로 종료 시 완료 표시로 바꿈
 
 #################################
 ### security-group
 #################################
 
-security-group :
+alb-security-group :
   stage : triggers
   needs : 
     - vpc # vpc가 끝나야 작업을 진행 strategy와 같이 사용
   trigger :
     include: security-group/alb-security-group/.gitlab-ci.yml
-    strategy: depend # strategy의 depend 사용 시, 해당 task가 정상적으로 종료 시 완료 표시로 바꾸미
+    strategy: depend # strategy의 depend 사용 시, 해당 task가 정상적으로 종료 시 완료 표시로 바꿈
+
+bastion-security-group :
+  stage : triggers
+  needs : 
+    - vpc # vpc가 끝나야 작업을 진행 strategy와 같이 사용
+  trigger :
+    include: security-group/bastion-security-group/.gitlab-ci.yml
+    strategy: depend # strategy의 depend 사용 시, 해당 task가 정상적으로 종료 시 완료 표시로 바꿈
+
+control-plane-security-group :
+  stage : triggers
+  needs : 
+    - vpc # vpc가 끝나야 작업을 진행 strategy와 같이 사용
+  trigger :
+    include: security-group/control-plane-security-group/.gitlab-ci.yml
+    strategy: depend # strategy의 depend 사용 시, 해당 task가 정상적으로 종료 시 완료 표시로 바꿈
+
+data-plane-security-group :
+  stage : triggers
+  needs : 
+    - vpc # vpc가 끝나야 작업을 진행 strategy와 같이 사용
+  trigger :
+    include: security-group/data-plane-security-group/.gitlab-ci.yml
+    strategy: depend # strategy의 depend 사용 시, 해당 task가 정상적으로 종료 시 완료 표시로 바꿈
 
 #################################
 ### security-group-rule
 #################################
 
-security-group-rule :
+alb-security-group-rule :
   stage : triggers
   needs : 
-    - security-group # vpc가 끝나야 작업을 진행 strategy와 같이 사용
+    - security-group
   trigger :
     include: security-group-rule/alb-security-group-rule/.gitlab-ci.yml
-    strategy: depend # strategy의 depend 사용 시, 해당 task가 정상적으로 종료 시 완료 표시로 바꾸미
+
+bastion-security-group-rule :
+  stage : triggers
+  needs : 
+    - security-group
+  trigger :
+    include: security-group-rule/bastion-security-group-rule/.gitlab-ci.yml
+
+control-plane-security-group-rule :
+  stage : triggers
+  needs : 
+    - security-group
+  trigger :
+    include: security-group-rule/control-plane-security-group-rule/.gitlab-ci.yml
+
+data-plane-security-group-rule :
+  stage : triggers
+  needs : 
+    - security-group
+  trigger :
+    include: security-group-rule/data-plane-security-group-rule/.gitlab-ci.yml
