--- a/project/b-service/vpc/.gitlab-ci.yml
+++ b/project/b-service/vpc/.gitlab-ci.yml
@@ -1,36 +1,3 @@
-#!/bin/bash
-
-# dir=$(find . -type d)
-
-# check argument
-if [ $# -ne 1 ]
-then
-  echo "Please check folder argumnet"
-  echo "Usage: $0 <path>"
-  exit 1
-fi
-
-ls | grep $1 >> /dev/null
-
-# check correct path
-if [ $? -eq 0 ]
-then
-  echo "Creating ci file below $1 folder"
-else
-  echo "Please check folder path that you want to create ci file"
-  exit 1
-fi
-
-# creating ci file in each folder
-dir=$(find $1 -type d)
-
-for folder in $dir
-do
-if [ -e "$(find $folder -name '*.tfvars')" ]
-then
-
-echo "Create gitlab-ci.yaml in $folder"
-cat << EOF > $folder/.gitlab-ci.yml
 
 # 공통 이미지 및 scripte 내용
 default:
@@ -43,11 +10,11 @@ default:
 # 공통 anchor 설정 
 .aws-configure: &aws-configure-profile
   - mkdir ~/.aws/
-  - printf "[default]\naws_access_key_id = %s\naws_secret_access_key = %s\n" "${AWS_ACCESS_KEY_ID}" "${AWS_SECRET_ACCESS_KEY}" > ~/.aws/credentials
-  - printf "[default]\nregion = %s\noutput = json\n" "${AWS_DEFAULT_REGION}" > ~/.aws/config
+  - printf "[default]\naws_access_key_id = %s\naws_secret_access_key = %s\n" "" "" > ~/.aws/credentials
+  - printf "[default]\nregion = %s\noutput = json\n" "" > ~/.aws/config
 
 .terraform-init: &terraform-init-module
-  - cd \${TF_DIR}
+  - cd ${TF_DIR}
   - terraform init -reconfigure -get=true -upgrade
 
 .common-feature: &common-feature
@@ -62,7 +29,7 @@ default:
   cache:
     - key: terraform
       paths:
-        - \${TF_DIR}.terraform
+        - ${TF_DIR}.terraform
       policy: pull-push
 
 
@@ -79,14 +46,13 @@ default:
 .after-script: &after-script
   - echo "Execute this script last"
   - sleep 5
-    
 
 ###############
 # 공통 변수 값 설정
 ###############
 
 variables:
-  TF_DIR : "$folder"
+  TF_DIR : "project/b-service/vpc"
   TAGS   : "sdh-test-runner"
 
 ###############
@@ -117,7 +83,7 @@ stages:
   #   refs:
   #     - main
   # tags:
-  #   - '${TAGS}'
+  #   - ''
 
 validate:
   stage: validate
@@ -129,15 +95,15 @@ validate:
     - env
     - pwd
   script:
-    - echo "$folder terraform validate"
+    - echo "project/b-service/vpc terraform validate"
     - terraform validate
   after_script:
-    - ls \${TF_DIR}/.terraform
+    - ls ${TF_DIR}/.terraform
   
   # tags:
-  #   - '${TAGS}'
+  #   - ''
 
-plan:
+.plan:
   stage: plan
   <<: *common-feature
   <<: *global_cache
@@ -147,19 +113,19 @@ plan:
     - terraform version
   script :
    - |
-    echo "$folder terraform plan"
+    echo "project/b-service/vpc terraform plan"
     terraform plan -refresh=false -out=planfile 
   after_script:
-    - ls \${TF_DIR}/.terraform
+    - ls ${TF_DIR}/.terraform
     - pwd
   dependencies:
     - validate
   artifacts:
     paths:
-      - \${TF_DIR}/planfile
+      - ${TF_DIR}/planfile
   
   # tags:
-  # - '${TAGS}'
+  # - ''
 
 .apply:
   stage: apply
@@ -193,7 +159,3 @@ plan:
   needs:
     - destroy-plan
   when: manual
-EOF
-
-fi
-done
